--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          </h2>
     
 <h3>
-    <button onclick="div"="'file:///C:/Users/elsam/Documents/POAal.html/nextpage.html/nextpage.html'">Next</button>
+    <button onclick="div"="'https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html'">Next</button>
 </div>
 </body>
 </html>
