--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
          </h2>
     
 <h3>
+    <a href="https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html">
+    <button>Next</button>
+</a>
     <button onclick="div"="'https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html'">Next</button>
 </div>
 </body>
