--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
              <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/409963123_363090369700895_8294438522897932572_n.png?stp=dst-png_s206x206&_nc_cat=108&ccb=1-7&_nc_sid=510075&_nc_ohc=plU80fsBQXwAX-b6lms&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&cb_e2o_trans=q&oh=03_AdReQBFT41ZvCuq1OehQQpb-DWI5o0WP_655xX2IHimaxQ&oe=65AC7B1B" alt="PEGAFI ONLINE APPOINTMENT" width="530px" height="530px" >
          </h2>
     
-<h3>
-    <a href="https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html">
-    <button>Next</button>
-</a>
-    <button onclick="div"="'https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html'">Next</button>
+   
+    <h3>
+         <button onclick="div"="'PEGAFIONLINEAPPOINTMENT.html'">Next</button>
+    </h3>
 </div>
 </body>
 </html>
