--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
    
     <h3>
-         <button onclick="div"="'PEGAFIONLINEAPPOINTMENT.html'">Next</button>
+         <button onclick="div"="'https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html'">Next</button>
     </h3>
 </div>
 </body>
