--- a/PEGAFIONLINEAPPOINTMENT.html
+++ b/PEGAFIONLINEAPPOINTMENT.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POA Next Page</title>
+    <title>PEGAFI ONLINE APPOINTMENT Request Page</title>
 </head>
 <style>
     h1{color: white;}
