--- a/PEGAFIONLINEAPPOINTMENT.html
+++ b/PEGAFIONLINEAPPOINTMENT.html
@@ -42,7 +42,7 @@
 
     </p>
     <h3>
-        <button onclick="document.location='https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html'">Next</button>
+        <button onclick="document.location='https://steinalberts27.github.io/research-website/PEGAFI%20Online%20Appointment%20Input%20name.html'">Next</button>
     </h3>
 </body>
 </html>
