--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
    
        
          <h2>
-             <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/409963123_363090369700895_8294438522897932572_n.png?stp=dst-png_s206x206&_nc_cat=108&ccb=1-7&_nc_sid=510075&_nc_ohc=plU80fsBQXwAX-b6lms&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&cb_e2o_trans=q&oh=03_AdReQBFT41ZvCuq1OehQQpb-DWI5o0WP_655xX2IHimaxQ&oe=65AC7B1B" alt="PEGAFI ONLINE APPOINTMENT" width="100%" max-width:500px height="100% max-height:"500px" >
+             <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/409963123_363090369700895_8294438522897932572_n.png?stp=dst-png_s206x206&_nc_cat=108&ccb=1-7&_nc_sid=510075&_nc_ohc=plU80fsBQXwAX-b6lms&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&cb_e2o_trans=q&oh=03_AdReQBFT41ZvCuq1OehQQpb-DWI5o0WP_655xX2IHimaxQ&oe=65AC7B1B" alt="PEGAFI ONLINE APPOINTMENT" width="align-self" height="align-self" >
          </h2>
     
    
