--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     p{font-family: sans-serif;}
     p{color: white;}
 
-    h1{text-align: center;}
-    h1{font-size: 50;}
-    h1{font-family: 'Times New Roman', Times, serif;} 
-    h1{color: white;}
+    H1,h1{text-align: center;}
+    H1,h1{font-size: 50;}
+    H1,h1{font-family: 'Times New Roman', Times, serif;} 
+    H1,h1{color: white;}
     h2 {text-align: center;}
     h3{
         text-align: center;}
@@ -54,7 +54,7 @@
 <body>
     
     <p> Welcome to</P>
-        <h1>PEGAFI ONLINE </h1>
+        <H1>PEGAFI ONLINE </H1>
         <h1>APPOINTMENT</h1>
        
    
