--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     H1,h1{font-size: 50;}
     H1,h1{font-family: 'Times New Roman', Times, serif;} 
     H1,h1{color: white;}
+        H1,H1{ width="align-self" height="align-self"}
     h2 {text-align: center;}
     h3{
         text-align: center;}
