--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     p{color: white;}
 
     h1{text-align: center;}
-    h1{font-size: 60;}
+    h1{font-size: 60px;}
     h1{font-family: 'Times New Roman', Times, serif;} 
     h1{color: white;}
         H1,H1{ width="align-self" height="align-self"}
