--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         img{align-items: center;}
 
     p{text-align: center;}
-    p{font-size: 50px;}
+    p{font-size: 30;}
     p{font-family: sans-serif;}
     p{color: white;}
         h1{font-size: 50;}
@@ -32,7 +32,7 @@
     
    
    button{
-    font-size: 50px;
+    font-size: 20px;
     background: linear-gradient(rgb(36, 10, 10),rgb(129,0,0));
     box-shadow: 0,0,5px maroon, black 0,0,10px;
     
