--- a/PEGAFI Online Appointment Input name.html
+++ b/PEGAFI Online Appointment Input name.html
@@ -15,7 +15,7 @@
          body{text-align: center}
          body{background: radial-gradient(maroon,black);}
         h1{text-align: center;}
-         h1{font-size: 50px;}
+         h1{font-size: 50;}
          h1{font-family: 'Times New Roman', Times, serif;} 
          h1{color: white;}
          h2{color: white;}
