Update PEGAFI Online Appointment Input name.html

--- a/PEGAFI Online Appointment Input name.html
+++ b/PEGAFI Online Appointment Input name.html
@@ -16,7 +16,7 @@
          body{background: radial-gradient(maroon,black);}
         h1{text-align: center;}
          h1{font-size: 50;}
-         h1{font-family: 'Times New Roman', Times, serif;} 
+         h1{font-family: sans-serif;} 
          h1{color: white;}
          h2{color: white;}
          h3{color: white;}
