Update PEGAFI Online Appointment Input name.html

--- a/PEGAFI Online Appointment Input name.html
+++ b/PEGAFI Online Appointment Input name.html
@@ -16,6 +16,7 @@
          body{background: radial-gradient(maroon,black);}
         h1{text-align: center;}
          h1{font-size: 50;}
+        h1{ width="align-self" height="align-self"}
          h1{font-family: sans-serif;} 
          h1{color: white;}
          h2{color: white;}
