Update PEGAFI Online Appointment Input name.html

--- a/PEGAFI Online Appointment Input name.html
+++ b/PEGAFI Online Appointment Input name.html
@@ -21,6 +21,14 @@
             width:400px;
             heigh:500px;
         }
+        form-area{
+            position: absolute
+            top:50%;
+            left:50%;
+            transform:translate(-50%,-50%);
+            width:400px;
+            height:500px;
+        }
          body{text-align: center}
          body{background: radial-gradient(maroon,black);}
         h1{text-align: center;}
