Update PEGAFI Online Appointment Input name.html

--- a/PEGAFI Online Appointment Input name.html
+++ b/PEGAFI Online Appointment Input name.html
@@ -33,7 +33,7 @@
             font-size: 60;
         }
         
-        h2,h3{
+        h3{
             text-align: center;
             color: rgb(253, 253, 253);
             font-size: 50;
@@ -71,9 +71,9 @@
         <form>
             <h1>PEGAFI ONLINE APPOINTMENT</h1> <br>
 
-            <h2>Choose a file</h2>
+            <h3>Choose a file</h3>
             <form action="action_form.php" method="get">
-             <input type="text" placeholder="Choose a file" list="file" name="file"required><br><br> 
+             <input type="text" placeholder="Choose a file" list="file" name="file"required>
              <datalist id="file">
                <option value="Grade Slip">
                <option value="Good Moral">
@@ -84,11 +84,11 @@
  
  
      <h3>Name:</h3>
-     <input type="name" placeholder="Enter Name"required><br><br>
+     <input type="name" placeholder="Enter Name"required>
  
      <h3>Strand:</h3>
      <form action="action_form.php" method="get">
-       <input type="text" placeholder="Strand" list="strand" name="strand"required><br><br> 
+       <input type="text" placeholder="Strand" list="strand" name="strand"required>
        <datalist id="strand">
          <option value="TVL-ICT">
          <option value="HUMSS">
@@ -98,7 +98,7 @@
      </form> 
  
      <h3>Grade and Section:</h3>
-     <input type="grade and section" placeholder="Enter Grade and Section"required><br><br>
+     <input type="grade and section" placeholder="Enter Grade and Section"required>
      
 <br><br>
 
