--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
              </div>
           <br><br>
           <div class="Button">
-               <button onclick="document.location='https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html'"> Next</button>
+               <button onclick="'document.location='https://steinalberts27.github.io/research-website/PEGAFIONLINEAPPOINTMENT.html'"> Next</button>
            </div>
         </form>
     </div>
