--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
 @media (min-width:1281px) { /* hi-res laptops and desktops */ }
 
-    p,h1,h2,h3{text-align: center;}
+    p,h1,h2,h3,div {text-align: center;}
     p,h1,h2{font-family: 'Franklin Gothic Medium', 'sans-serif';}
     p,h1,h2{color: white;}
     div{text-align: center;}
@@ -37,7 +37,8 @@
            width: 400px;
            padding:10px;
            background:rgba(0, 0, 0, 0.5);
-           border-radius: 10px; 
+           text-align:center;
+           border-radius: 10px;
           
         }  
 
