--- a/PEGAFIONLINEAPPOINTMENT.html
+++ b/PEGAFIONLINEAPPOINTMENT.html
@@ -19,9 +19,24 @@
         color: white;
         font-size: 50, smaller;
     }
+    
     body{background: radial-gradient(maroon,black);}
     div {text-align: center;}
-        
+
+    .container{
+           margin: auto ; 
+           margin-top: 3%;
+           margin-bottom: 50;
+           margin-left: 50;
+           margin-right: 50;
+           height: fit-content;
+           width: fit-content;
+           padding:10px;
+           background:rgba(0, 0, 0, 0.5);
+           border-radius: 10px; 
+          text-align: center;
+        }  
+
     button{
         align-self: center;
         font-size: 20px;
@@ -43,14 +58,16 @@
 </style>
 <body>
     <br> <br>
+    <div class="container">
+        <form>
     <h1>REQUEST FOR ONLINE APPOINTMENT</h1>
     <p>To request for an online appointment, we will need the following:</p>
     <ul class="icon">
-       <li><a href="#"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/411534968_6144283465674359_14525276176634218_n.png?_nc_cat=106&ccb=1-7&_nc_sid=510075&_nc_eui2=AeFO3KzAeChq4dweJVk8KwODD6GuhZgbeQ4Poa6FmBt5DtYUlirD82igfXHy-jhQOSB-RIz0Hpo5CDWOSp2_He1_&_nc_ohc=cqnKIHXZ5BwAX_MeEG6&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRTkHI564R3riH4tDdFBNGl5KHB5OrUBxzlvQzlQTVsgg&oe=65AC9DA6"alt="STUDENT'S NAME" width="100%" max-width:500px height="align-items"></a></li> 
-       <li><a href="#"> <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/411585497_683957583551925_1375832711863994142_n.png?_nc_cat=106&ccb=1-7&_nc_sid=510075&_nc_eui2=AeH_rqdaQbH8Rg0WOF8mlzf7UWAuoKUQc2BRYC6gpRBzYO5BtQEbUJUDNoYWoUUNUzMPg3uQ_Wnoar__F2V5vR4Q&_nc_ohc=BucnRy6-jX0AX-rDptP&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQ8DrjwbaglS7YNG-te4PXky00P9Sv_ZF354GbquWUytA&oe=65ACACE4"alt="STUDENT'S STRAND" width="100%" max-width:500px height="align-items"></a></li>
-        <li><a href="#"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/409407034_1320206368675221_8792089616657802279_n.png?_nc_cat=106&ccb=1-7&_nc_sid=510075&_nc_eui2=AeFlqsrcvMSjlhCQxvgMrRjeQHDNLRUjYeNAcM0tFSNh4w2QFxUVBMC2xkA-Bq6_73cSTXON8C1hg4Btn8PjGsQi&_nc_ohc=xiIzZgU5KroAX9GSaIv&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQGTALCgxzkE4WRwuzJQJj4sMLR-eJAiC0v51VqQy8NAg&oe=65AC9EE3"alt="STUDENT'S GRADE & SECTION"width="100%" max-width:500px height="align-items">
-        </a></li>
+       <li><a href="#"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/411534968_6144283465674359_14525276176634218_n.png?_nc_cat=106&ccb=1-7&_nc_sid=510075&_nc_eui2=AeFO3KzAeChq4dweJVk8KwODD6GuhZgbeQ4Poa6FmBt5DtYUlirD82igfXHy-jhQOSB-RIz0Hpo5CDWOSp2_He1_&_nc_ohc=cqnKIHXZ5BwAX_MeEG6&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRTkHI564R3riH4tDdFBNGl5KHB5OrUBxzlvQzlQTVsgg&oe=65AC9DA6"alt="STUDENT'S NAME" width="500" height="align-self"></a></li> 
+       <li><a href="#"> <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/411585497_683957583551925_1375832711863994142_n.png?_nc_cat=106&ccb=1-7&_nc_sid=510075&_nc_eui2=AeH_rqdaQbH8Rg0WOF8mlzf7UWAuoKUQc2BRYC6gpRBzYO5BtQEbUJUDNoYWoUUNUzMPg3uQ_Wnoar__F2V5vR4Q&_nc_ohc=BucnRy6-jX0AX-rDptP&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQ8DrjwbaglS7YNG-te4PXky00P9Sv_ZF354GbquWUytA&oe=65ACACE4"alt="STUDENT'S STRAND" width="500"  height="align-self"></a></li>
+        <li><a href="#"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/409407034_1320206368675221_8792089616657802279_n.png?_nc_cat=106&ccb=1-7&_nc_sid=510075&_nc_eui2=AeFlqsrcvMSjlhCQxvgMrRjeQHDNLRUjYeNAcM0tFSNh4w2QFxUVBMC2xkA-Bq6_73cSTXON8C1hg4Btn8PjGsQi&_nc_ohc=xiIzZgU5KroAX9GSaIv&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQGTALCgxzkE4WRwuzJQJj4sMLR-eJAiC0v51VqQy8NAg&oe=65AC9EE3"alt="STUDENT'S GRADE & SECTION"width="500" height="align-self"></a></li>
     </ul>
+</form> <br>
 
     <div class="Button">
         <button onclick="document.location='https://steinalberts27.github.io/research-website/PEGAFI%20Online%20Appointment%20Input%20name.html'">Next</button>
